--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -41,6 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ManejadorDeSesion.cs" />
+    <Compile Include="MultiIdioma\Etiqueta.cs" />
+    <Compile Include="MultiIdioma\Idioma.cs" />
+    <Compile Include="MultiIdioma\IIdiomaObserver.cs" />
+    <Compile Include="MultiIdioma\Traduccion.cs" />
+    <Compile Include="MultiIdioma\Traductor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionState.cs" />
   </ItemGroup>
@@ -48,6 +54,10 @@
     <ProjectReference Include="..\BE\BE.csproj">
       <Project>{e524e27c-2bf1-4f72-a3c0-dd0238466298}</Project>
       <Name>BE</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{0401B909-E9C2-4F36-ACC5-FDD0CD9448C5}</Project>
+      <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
