--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -52,16 +52,55 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmDisco.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDisco.Designer.cs">
+      <DependentUpon>FrmDisco.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmGaleria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGaleria.Designer.cs">
+      <DependentUpon>FrmGaleria.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPrincipal.Designer.cs">
+      <DependentUpon>FrmPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UcVistaDisco.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UcVistaDisco.Designer.cs">
+      <DependentUpon>UcVistaDisco.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UcVistaProducto.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UcVistaProducto.Designer.cs">
+      <DependentUpon>UcVistaProducto.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FrmDisco.resx">
+      <DependentUpon>FrmDisco.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGaleria.resx">
+      <DependentUpon>FrmGaleria.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPrincipal.resx">
+      <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -72,6 +111,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UcVistaDisco.resx">
+      <DependentUpon>UcVistaDisco.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UcVistaProducto.resx">
+      <DependentUpon>UcVistaProducto.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
