--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -49,6 +49,7 @@
     <Compile Include="InversionBusiness.cs" />
     <Compile Include="IUSuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TraduccionBusiness.cs" />
     <Compile Include="UsuarioBossBusiness.cs" />
     <Compile Include="UsuarioBusiness.cs" />
     <Compile Include="UsuarioClienteBusiness.cs" />
