Sigo subiendo cosas

--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -46,8 +46,10 @@
     <Compile Include="CopiaEntity.cs" />
     <Compile Include="DiscoEntity.cs" />
     <Compile Include="EtiquetaEntity.cs" />
+    <Compile Include="GrupoEntity.cs" />
     <Compile Include="IdiomaEntity.cs" />
     <Compile Include="InversionEntity.cs" />
+    <Compile Include="PermisoEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TraduccionEntity.cs" />
     <Compile Include="UsuarioBossEntity.cs" />
