--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -46,6 +46,8 @@
     <Compile Include="McCompra.cs" />
     <Compile Include="McCopia.cs" />
     <Compile Include="McIdioma.cs" />
+    <Compile Include="McInversion.cs" />
+    <Compile Include="McPermiso.cs" />
     <Compile Include="McTraductor.cs" />
     <Compile Include="McUsuario.cs" />
     <Compile Include="McUsuarioComercial.cs" />
