--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="McComision.cs" />
     <Compile Include="McCompra.cs" />
     <Compile Include="McCopia.cs" />
+    <Compile Include="McEnvio.cs" />
     <Compile Include="McIdioma.cs" />
     <Compile Include="McInversion.cs" />
     <Compile Include="McPermiso.cs" />
