--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -40,83 +40,61 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmAltaCopia.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmAltaCopia.cs" />
     <Compile Include="FrmAltaCopia.Designer.cs">
       <DependentUpon>FrmAltaCopia.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmCompra.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmCompra.cs" />
     <Compile Include="FrmCompra.Designer.cs">
       <DependentUpon>FrmCompra.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmDisco.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmDisco.cs" />
     <Compile Include="FrmDisco.Designer.cs">
       <DependentUpon>FrmDisco.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmGaleria.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmGaleria.cs" />
     <Compile Include="FrmGaleria.Designer.cs">
       <DependentUpon>FrmGaleria.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmIdioma.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmIdioma.cs" />
     <Compile Include="FrmIdioma.Designer.cs">
       <DependentUpon>FrmIdioma.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmInversion.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmInversion.cs" />
     <Compile Include="FrmInversion.Designer.cs">
       <DependentUpon>FrmInversion.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmLogin.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmLogin.cs" />
     <Compile Include="FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmLogistica.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmLogistica.cs" />
     <Compile Include="FrmLogistica.Designer.cs">
       <DependentUpon>FrmLogistica.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmPrincipal.cs">
-      <SubType>Form</SubType>
+    <Compile Include="FrmPermiso.cs" />
+    <Compile Include="FrmPermiso.Designer.cs">
+      <DependentUpon>FrmPermiso.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPrincipal.cs" />
     <Compile Include="FrmPrincipal.Designer.cs">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmRegistro.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="FrmRegistro.cs" />
     <Compile Include="FrmRegistro.Designer.cs">
       <DependentUpon>FrmRegistro.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UcVistaDisco.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="UcVistaDisco.cs" />
     <Compile Include="UcVistaDisco.Designer.cs">
       <DependentUpon>UcVistaDisco.cs</DependentUpon>
     </Compile>
-    <Compile Include="UcVistaProducto.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="UcVistaProducto.cs" />
     <Compile Include="UcVistaProducto.Designer.cs">
       <DependentUpon>UcVistaProducto.cs</DependentUpon>
     </Compile>
@@ -143,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLogistica.resx">
       <DependentUpon>FrmLogistica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPermiso.resx">
+      <DependentUpon>FrmPermiso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrincipal.resx">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
