--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,57 +46,83 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmAltaCopia.cs" />
+    <Compile Include="FrmAltaCopia.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmAltaCopia.Designer.cs">
       <DependentUpon>FrmAltaCopia.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmCompra.cs" />
+    <Compile Include="FrmCompra.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmCompra.Designer.cs">
       <DependentUpon>FrmCompra.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmDisco.cs" />
+    <Compile Include="FrmDisco.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmDisco.Designer.cs">
       <DependentUpon>FrmDisco.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmGaleria.cs" />
+    <Compile Include="FrmGaleria.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmGaleria.Designer.cs">
       <DependentUpon>FrmGaleria.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmIdioma.cs" />
+    <Compile Include="FrmIdioma.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmIdioma.Designer.cs">
       <DependentUpon>FrmIdioma.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmInversion.cs" />
+    <Compile Include="FrmInversion.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmInversion.Designer.cs">
       <DependentUpon>FrmInversion.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmLogin.cs" />
+    <Compile Include="FrmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmLogistica.cs" />
+    <Compile Include="FrmLogistica.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmLogistica.Designer.cs">
       <DependentUpon>FrmLogistica.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmPermiso.cs" />
+    <Compile Include="FrmPermiso.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmPermiso.Designer.cs">
       <DependentUpon>FrmPermiso.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmPrincipal.cs" />
+    <Compile Include="FrmPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmPrincipal.Designer.cs">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmRegistro.cs" />
+    <Compile Include="FrmRegistro.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmRegistro.Designer.cs">
       <DependentUpon>FrmRegistro.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UcVistaDisco.cs" />
+    <Compile Include="UcVistaDisco.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="UcVistaDisco.Designer.cs">
       <DependentUpon>UcVistaDisco.cs</DependentUpon>
     </Compile>
-    <Compile Include="UcVistaProducto.cs" />
+    <Compile Include="UcVistaProducto.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="UcVistaProducto.Designer.cs">
       <DependentUpon>UcVistaProducto.cs</DependentUpon>
     </Compile>
