--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -45,6 +45,8 @@
     <Compile Include="McCompra.cs" />
     <Compile Include="McCopia.cs" />
     <Compile Include="McEnvio.cs" />
+    <Compile Include="McEtiqueta.cs" />
+    <Compile Include="McIdioma.cs" />
     <Compile Include="McInversion.cs" />
     <Compile Include="McPermiso.cs" />
     <Compile Include="McTraductor.cs" />
