--- a/Abstractions/Abstractions.csproj
+++ b/Abstractions/Abstractions.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E524E27C-2BF1-4F72-A3C0-DD0238466298}</ProjectGuid>
+    <ProjectGuid>{CA0472F0-7863-4D54-AC57-DCDCE98F0D75}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BE</RootNamespace>
-    <AssemblyName>BE</AssemblyName>
+    <RootNamespace>Abstractions</RootNamespace>
+    <AssemblyName>Abstractions</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,45 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cassette.cs" />
-    <Compile Include="ComisionEntity.cs" />
-    <Compile Include="CompraEntity.cs" />
-    <Compile Include="CopiaEntity.cs" />
-    <Compile Include="DiscoEntity.cs" />
-    <Compile Include="EnvioEntity.cs" />
-    <Compile Include="EtiquetaEntity.cs" />
-    <Compile Include="GrupoEntity.cs" />
-    <Compile Include="IdiomaEntity.cs" />
-    <Compile Include="InversionEntity.cs" />
-    <Compile Include="PermisoEntity.cs" />
+    <Compile Include="ICopia.cs" />
+    <Compile Include="IDisco.cs" />
+    <Compile Include="IEntity.cs" />
+    <Compile Include="IEtiqueta.cs" />
+    <Compile Include="IIdioma.cs" />
+    <Compile Include="ITraduccion.cs" />
+    <Compile Include="IUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-    <Compile Include="TraduccionEntity.cs" />
-    <Compile Include="UsuarioBossEntity.cs" />
-    <Compile Include="UsuarioClienteEntity.cs" />
-    <Compile Include="UsuarioComercialEntity.cs" />
-    <Compile Include="UsuarioEntity.cs" />
-    <Compile Include="UsuarioLogisticaEntity.cs" />
-    <Compile Include="VandCoinEntity.cs" />
-    <Compile Include="VentaEntity.cs" />
-    <Compile Include="Vinyl.cs" />
-    <Compile Include="WalletEntity.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Abstractions\Abstractions.csproj">
-      <Project>{ca0472f0-7863-4d54-ac57-dcdce98f0d75}</Project>
-      <Name>Abstractions</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
