--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -53,6 +53,7 @@
     <Compile Include="IdiomaEntity.cs" />
     <Compile Include="InversionEntity.cs" />
     <Compile Include="InversionPasiva.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="PermisoEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
