--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -51,6 +51,7 @@
     <Compile Include="IdiomaBusiness.cs" />
     <Compile Include="InversionBusiness.cs" />
     <Compile Include="IUSuario.cs" />
+    <Compile Include="LogBusiness.cs" />
     <Compile Include="PermisoBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TraduccionBusiness.cs" />
