--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Factory\Creator.cs" />
     <Compile Include="Factory\CreatorCassette.cs" />
     <Compile Include="Factory\CreatorVinyl.cs" />
+    <Compile Include="Login\Login.cs" />
     <Compile Include="Session\ManejadorDeSesion.cs" />
     <Compile Include="MultiIdioma\Etiqueta.cs" />
     <Compile Include="MultiIdioma\Idioma.cs" />
