add DVV and bitacore

--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DiscoEntity.cs" />
     <Compile Include="EnvioEntity.cs" />
     <Compile Include="EtiquetaEntity.cs" />
+    <Compile Include="EventoBitacora.cs" />
     <Compile Include="GrupoEntity.cs" />
     <Compile Include="IdiomaEntity.cs" />
     <Compile Include="InversionEntity.cs" />
