--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Application.cs" />
     <Compile Include="BandaBusiness.cs" />
     <Compile Include="CompraBusiness.cs" />
     <Compile Include="CopiaBusiness.cs" />
@@ -79,6 +78,9 @@
       <Project>{1c04a200-c72b-4c59-aa00-4fcf20f9d600}</Project>
       <Name>Services</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
