--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -52,11 +52,23 @@
     <Compile Include="FrmAltaCopia.Designer.cs">
       <DependentUpon>FrmAltaCopia.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmBackupRestore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBackupRestore.Designer.cs">
+      <DependentUpon>FrmBackupRestore.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmBanda.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmBanda.Designer.cs">
       <DependentUpon>FrmBanda.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmBitacora.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBitacora.Designer.cs">
+      <DependentUpon>FrmBitacora.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmCompra.cs">
       <SubType>Form</SubType>
@@ -69,6 +81,12 @@
     </Compile>
     <Compile Include="FrmComprarVandCoins.Designer.cs">
       <DependentUpon>FrmComprarVandCoins.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmDigitosVerificadores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDigitosVerificadores.Designer.cs">
+      <DependentUpon>FrmDigitosVerificadores.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmDisco.cs">
       <SubType>Form</SubType>
@@ -171,14 +189,23 @@
     <EmbeddedResource Include="FrmAltaCopia.resx">
       <DependentUpon>FrmAltaCopia.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmBackupRestore.resx">
+      <DependentUpon>FrmBackupRestore.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmBanda.resx">
       <DependentUpon>FrmBanda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmBitacora.resx">
+      <DependentUpon>FrmBitacora.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCompra.resx">
       <DependentUpon>FrmCompra.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmComprarVandCoins.resx">
       <DependentUpon>FrmComprarVandCoins.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDigitosVerificadores.resx">
+      <DependentUpon>FrmDigitosVerificadores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmDisco.resx">
       <DependentUpon>FrmDisco.cs</DependentUpon>
